Enhance project configuration and dependencies
- Updated requirements.txt to include new dependencies: psutil, tqdm, aiofiles, and aiologger.
- Modified models/__init__.py to include AdvancedNN and HybridMemorySystem.
- Expanded .env file with interactive configuration options.
- Updated contracts/addresses.json to add validators and gas price settings.
- Enhanced hardhat.config.js with mining settings and increased timeouts.
- Improved solhint.json and eslint configurations for stricter code quality checks.
- Refined Dockerfile for better caching and health checks.
- Added test_validation_coordinator.py for validation workflow testing.
- Updated package.json with new scripts and dependencies for interactive testing.
- Enhanced pyproject.toml with additional pylint and pytest configurations.
- Improved docker-compose.yml with health checks and resource limits for services.

--- a/.env
+++ b/.env
@@ -47,3 +47,15 @@ RL_GAMMA=0.99
 RL_LEARNING_RATE=0.001
 RL_BATCH_SIZE=32
 RL_UPDATE_INTERVAL=100
+
+# Interactive Configuration
+INTERACTION_LEVEL=NORMAL
+INTERACTIVE_TIMEOUT=300
+INTERACTIVE_SAFE_MODE=true
+INTERACTIVE_PERSISTENT_STATE=true
+INTERACTIVE_AUTO_RECOVERY=true
+INTERACTIVE_CLEANUP_TIMEOUT=30
+INTERACTIVE_MEMORY_THRESHOLD=0.9
+INTERACTIVE_LOG_INTERACTIONS=true
+INTERACTIVE_MAX_RETRIES=3
+INTERACTIVE_HEARTBEAT_INTERVAL=30
