--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "hardhat": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web3": "^1.8.0"
+    "web3": "^1.8.0",
+    "inquirer": "^8.2.5",
+    "ora": "^6.1.2", 
+    "chalk": "^4.1.2",
+    "figlet": "^1.5.2",
+    "commander": "^9.4.1",
+    "boxen": "^7.0.1",
+    "cli-progress": "^3.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +24,20 @@
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write \"**/*.{js,ts,json}\"",
     "solhint": "solhint contracts/**/*.sol",
-    "cleanup": "python scripts/cleanup.py"
+    "cleanup": "python scripts/cleanup.py",
+    "start:interactive": "node scripts/interactive.js",
+    "start:minimal": "cross-env INTERACTION_LEVEL=MINIMAL node scripts/interactive.js",
+    "start:verbose": "cross-env INTERACTION_LEVEL=VERBOSE node scripts/interactive.js",
+    "start:production": "cross-env NODE_ENV=production INTERACTION_LEVEL=MINIMAL node scripts/interactive.js",
+    "monitor": "node scripts/monitor.js",
+    "interactive:setup": "node scripts/setup.js --interactive",
+    "interactive:test": "jest --detectOpenHandles --forceExit tests/interactive/**/*.test.js"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.3.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
