--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ scikit-learn>=0.24.2
 fastapi>=0.68.0
 pydantic>=1.8.2
 python-dotenv>=0.19.0
+psutil>=5.9.5
+tqdm>=4.65.0
+aiofiles>=23.2.1
+aiologger>=0.7.0
