`feat: Implement cross-domain transfer and symbolic reasoning in federated learning, enhance chatbot interface with event handling and caching, and improve RL trainer with priority sampling and gradient accumulation.`

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,21 @@ psutil>=5.9.5
 tqdm>=4.65.0
 aiofiles>=23.2.1
 aiologger>=0.7.0
+uvicorn>=0.15.0,<0.16.0  # Production ASGI server
+gunicorn>=20.1.0,<21.0.0 # WSGI HTTP Server
+sentry-sdk>=1.5.0  # Error tracking
+prometheus-client>=0.12.0  # Metrics collection
+python-jose[cryptography]>=3.3.0  # JWT token handling
+passlib[bcrypt]>=1.7.4  # Password hashing
+tenacity>=8.0.1  # Retry mechanisms
+aiohttp>=3.8.0  # Async HTTP client
+supervisor>=4.2.4  # Process management
+uvloop>=0.16.0  # Fast event loop
+httpx>=0.23.0  # HTTP client with timeout support
+structlog>=21.5.0  # Structured logging
+asyncio-throttle>=1.0.2  # Rate limiting
+cryptography>=35.0.0  # Strong crypto primitives
+pytest>=7.0.0  # Testing framework
+pytest-asyncio>=0.18.0  # Async test support
+mypy>=0.950  # Static type checking
+black>=22.3.0  # Code formatting
