I have been focusing on implimenting the complete integration of all modules for production deployment
This commit:
- Adds system coordinator to manage module interactions and resource allocation
- Implements cognitive evolution components for model optimization
- Creates CI/CD pipeline with GitHub Actions workflow
- Expands backend services with IPFS integration and monitoring
- Refactors configuration management with JSON-based dependency tracking
- Improves network functionality with enhanced DHT implementation
- Adds comprehensive testing for cognitive learning and federated systems
- Establishes production environment setup and initialization scripts

I am proud to say that Finally!
All modules now work together as an integrated system ready for production deployment.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "ipfs-http-client": "^60.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "winston": "^3.11.0"
+    "multiaddr": "^10.0.1",
+    "winston": "^3.11.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
