--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ eth-utils>=2.2.0
 python-dotenv>=1.0.0
 PyJWT==2.8.0  # JSON Web Token implementation for authentication
 backoff>=2.0.0
-numpy>=1.19.0
+numpy>=1.19.0,<2.0.0
 torch>=1.10.0
 psutil>=5.9.0
 
@@ -58,10 +58,13 @@ matplotlib>=3.4.0
 
 # Optional: GPU support
 # torch with CUDA - uncomment if needed
-torch==1.9.0+cu111
+#torch==1.9.0+cu111
+
+# NLP Build Dependencies
+Cython>=0.29.32
 
 # NLP Components
-spacy>=3.5.0
+# spacy==3.6.1  # Commenting out until Python 3.13 wheels are available
 nltk>=3.8.1  # Added NLTK
-textblob>=0.17.1  # Added TextBlob for additional NLP features
+textblob>=0.17.1  # TextBlob for additional NLP features
 wordcloud>=1.8.2.2  # For visualizing text data
