--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,10 @@
-tqdm
-web3
+tqdm>=4.61.0
+web3>=6.0.0
 pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-asyncio>=0.21.0
 cryptography>=40.0.0
+pyjwt>=2.0.0
 torch>=2.0.0
 transformers>=4.30.0
 numpy>=1.24.0
