--- a/.env
+++ b/.env
@@ -4,12 +4,16 @@ NODE_ENV=development
 
 # P2P Network Configuration
 UDP_PORT=8468
+DHT_PORT=8469  # Added separate DHT port
+DHT_BOOTSTRAP_NODES=node_01:8469,node_02:8469  # Updated to use DHT port
 NETWORK_SECRET=your_network_secret_key_here
+ENCRYPTION_KEY=YOUR_ENCRYPTION_KEY_HERE  # Must be 32 url-safe base64-encoded bytes
 
 # Network Configuration
 PORT=3000
 
 # Database
+DATABASE_URL=sqlite:///db.sqlite3
 
 # Blockchain
 PRIVATE_KEY=your_private_key_here
